header fix on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -1082,6 +1082,12 @@ body {
     font-size: 2.5rem;
     letter-spacing: 0.5rem; } }
 
+@media (max-width: 375px) {
+  .heading-main {
+    letter-spacing: 0.1rem; }
+  .heading-sub {
+    letter-spacing: 0.3rem; } }
+
 /* ABOUT HEADER PART */
 .about-header {
   width: 100%;
